cluster/apps/networking/minio-proxy/minio-proxy.endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-proxy
  namespace: monitoring
  labels:
    app: minio-proxy
subsets:
  - addresses:
      - ip: ${SECRET_MINIO_IP}
    ports:
      - name: http
        port: 9000
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-proxy-ui
  namespace: monitoring
  labels:
    app: minio-proxy-ui
subsets:
  - addresses:
      - ip: ${SECRET_MINIO_IP}
    ports:
      - name: http
        port: 9001
        protocol: TCP
