cluster/apps/networking/minio-proxy/minio-proxy.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-proxy
  namespace: monitoring
  labels:
    app: minio-proxy
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: 9000
  selector:
    app.kubernetes.io/name: minio-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: minio-proxy-ui
  namespace: monitoring
  labels:
    app: minio-proxy-ui
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9001
      targetPort: 9001
  selector:
    app.kubernetes.io/name: minio-proxy-ui
